--- a/style.css
+++ b/style.css
@@ -17,12 +17,44 @@ body{
   }
 
 #game{
-    width: 100%;
-    height: 100%;
-    position: relative;
-    overflow: hidden;
-    /* border: 1px double white; */
-    margin: auto;
+  
+  display: flex;
+
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  /* border: 1px double white; */
+  margin: auto;
+
+  }
+
+  #game h1 {
+    color: white;
+    left: 50%;
+    top: 10%;
+    transform: translate(-50%,-50%);
+    position: absolute;
+    text-transform: uppercase;
+    text-shadow: 0 0 10px blue;
+
+    animation: lefido 1.5s linear infinite;
+    transform-origin: left;
+    
+  }
+
+  @keyframes lefido {
+    0%{
+      text-shadow: 0 0 5px white;
+    }
+   
+    50%{
+      text-shadow: 0 0 30px white;
+      scale: 1.2;
+    }
+    100%{
+      text-shadow: 0 0 5px white;
+    }
   }
 
  
